--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
     <main class="wrapper">
       <picture class="profile">
-        <source media="(min-width: 1200px)" srcset="images/desktop.jpg" />
-        <source media="(min-width: 501px)" srcset="images/tablet.jpg" />
-        <img src="images/phone.jpg" alt="That's me!" />
+        <source media="(min-width: 1200px)" srcset="desktop.jpg" />
+        <source media="(min-width: 501px)" srcset="tablet.jpg" />
+        <img src="phone.jpg" alt="That's me!" />
       </picture>
       <h2 class="subheader">About Me</h2>
       <p>This Is My Bio Information</p>
