--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <footer>
         <p>
           <small
-            >&copy; 2021-<span id="this-year"></span> by YOUR NAME HERE, All
+            >&copy; 2021-<span id="this-year"></span> by MINH NGUYEN, All
             Rights Reserved ~
             <a id="html-checker" href="0" target="_blank">Check HTML</a> ~
             <a id="css -checker" href="0" target="_blank">CHeck CSS</a></small
